--- a/start.html
+++ b/start.html
@@ -2,10 +2,10 @@
    <html lang="pl-PL">
 <head>
  
-<META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=iso-8859-2">
+<META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=iso-8859-2" charset="utf-8">>
 </head>
 <body>
-<h1 align="center">Wiktoria Chechła</h1>
+<h1 align="center">Wiktoria ChechÂła</h1>
 
 </body>
 </html>
