--- a/start.html
+++ b/start.html
@@ -2,7 +2,7 @@
    <html lang="pl-PL">
 <head>
  
-<META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=iso-8859-2" charset="utf-8">>
+<META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=iso-8859-2" charset="utf-8">
 </head>
 <body>
 <h1 align="center">Wiktoria Chech³a</h1>
