--- a/start.html
+++ b/start.html
@@ -5,7 +5,7 @@
 <META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=iso-8859-2" charset="utf-8">
 </head>
 <body>
-<h1 align="center">Wiktoria Chechła</h1>
+<h1 align="center">Wiktoria Chechla</h1>
 
 </body>
 </html>
