--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
   <head>
-    <meta http-equiv="content-type" content="text/html" charset="iso-8859-2">
+    <meta http-equiv="content-type" content="text/html" charset="UTF-8">
   </head>
   <body>
     <table width=95% border="1" align="center">
     <tr>
       <td width=18% align="center">
-	    <h1><marquee bgcolor="#B9A7FD">Chechła</marquee></h1>
+	    <h1><marquee bgcolor="#B9A7FD">ChechÂła</marquee></h1>
 		<a href="zadanie2.html" target="strony">zadanie 2</a><br>
 		<a href="zadanie3.html" target="strony">zadanie 3</a><br>
 		<a href="zadanie4.html" target="strony">zadanie 4</a><br>
 	    <a href="chec_z5_1.html" target="strony"> Z5_importowany</a><br>
-	    <a href="chec_z5_2.html" target="strony"> Z5_zewnętrzny</a><br>
-	    <a href="chec_z5_3.html" target="strony"> Z5_wewnętrzna</a><br>
+	    <a href="chec_z5_2.html" target="strony"> Z5_zewnĂŞtrzny</a><br>
+	    <a href="chec_z5_3.html" target="strony"> Z5_wewnĂŞtrzna</a><br>
 		<a href="chec_z5_4.html" target="strony"> Z5_liniowy</a><br>
 		<a href="chec_z6.html" target="strony"> zadanie 6</a><br>
 		<a href="chec_z7.html" target="strony"> zadanie 7</a><br>
@@ -33,8 +33,8 @@
       <td width=18% align="center">
 	    <a href="start.html" target="strony">Start</a><br>
 		<a href="chec_z5_1.css" target="strony">Z5_importowany</a><br>
-		<a href="chec_z5_2.css" target="strony">Z5_zewnętrzny</a><br>
-		<a href="chec_z5_3.css" target="strony">Z5_wewnętrzna</a><br>
+		<a href="chec_z5_2.css" target="strony">Z5_zewnĂŞtrzny</a><br>
+		<a href="chec_z5_3.css" target="strony">Z5_wewnĂŞtrzna</a><br>
 		<a href="chec_z5_4.css" target="strony">Z5_liniowy</a><br>
 		<a href="chec_z6kod.html" target="strony">kod do 6</a><br>
 		<a href="chec_z7kod.html" target="strony">kod do 7</a><br>
