--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <table width=95% border="1" align="center">
     <tr>
       <td width=18% align="center">
-	    <h1><marquee bgcolor="#B9A7FD">Chech³a</marquee></h1>
+	    <h1><marquee bgcolor="#B9A7FD">Chechła</marquee></h1>
 		<a href="zadanie2.html" target="strony">zadanie 2</a><br>
 		<a href="zadanie3.html" target="strony">zadanie 3</a><br>
 		<a href="zadanie4.html" target="strony">zadanie 4</a><br>
