--- a/chec_z6kod.html
+++ b/chec_z6kod.html
@@ -1,3 +1,11 @@
+
+
+<!DOCTYPE html>
+<html lang="pl-PL">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+<h1>KOD HTML</h1>
 <TEXTAREA cols="50" rows="41">
 <!DOCTYPE html>
 <html lang="pl-PL">
@@ -7,18 +15,7 @@
  <LINK href="chec_z6.css" rel="stylesheet" 
 type="text/CSS">
  <title>Emotikony</title>
- <style>
- body {
-  color: blue;
-  font-size: 30pt;
-}
-p.blue {
-  color: blue;
-}
-p.green {
-  color: green;
-}
- </style>
+
 </head>
 <body>
 
@@ -33,4 +30,17 @@ p.green {
 
 </body>
 </html>
+</TEXTAREA>
+
+<h1>KOD CSS<h1>
+<TEXTAREA cols="10" rows="15">
+body {
+  color: blue;
+  font-size: 30pt;
+}
+p.blue {
+  color: blue;
+}
+p.green {
+  color: green;
 </TEXTAREA>
