--- a/chec_z13kod.html
+++ b/chec_z13kod.html
@@ -1,4 +1,10 @@
-<TEXTAREA cols="60" rows="40">
+<!DOCTYPE html>
+<html lang="pl-PL">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+<h1>KOD HTML</h1>
+<TEXTAREA cols="55" rows="31">
 <!DOCTYPE html>
 <html lang="pl-PL">
 <head>
@@ -8,20 +14,6 @@
 type="text/CSS">
  <title>Emotikony</title>
  
- <style>
-     body {
-  color: blue;
-  font-size: 47mm;
-}
-p {
-  font-size: 34mm;
-}
-p.blue {
-  color: blue;
-}
-p.green {
-  color: green;
-    </style>
 </head>
 <body>
 
@@ -36,4 +28,21 @@ p.green {
 
 </body>
 </html>
+</TEXTAREA>
+</TEXTAREA>
+
+<h1>KOD CSS<h1>
+<TEXTAREA cols="20" rows="15">
+     body {
+  color: blue;
+  font-size: 47mm;
+}
+p {
+  font-size: 34mm;
+}
+p.blue {
+  color: blue;
+}
+p.green {
+  color: green;
 </TEXTAREA>
