--- a/chec_z15kod.html
+++ b/chec_z15kod.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="pl-PL">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+<h1>KOD HTML</h1>
 <TEXTAREA cols="60" rows="41"
 <!DOCTYPE html>
 <html lang="pl-PL">
@@ -7,22 +13,7 @@
  <LINK href="chec_z15.css" rel="stylesheet" 
 type="text/CSS">
  <title>Emotikony</title>
- <style>
- div {
-  color: #0D4C52;
-}
 
-body {
-  color: rgb(13%, 76%, 82%);
-  font-size: 30pt;
-}
-
-
-p
-{
-  color: #0D4C52;
-}
- </style>
 </head>
 <body>
 
@@ -37,4 +28,22 @@ p
 
 </body>
 </html>
+</TEXTAREA>
+
+<h1>KOD CSS<h1>
+<TEXTAREA cols="20" rows="15">
+ div {
+  color: #0D4C52;
+}
+
+body {
+  color: rgb(13%, 76%, 82%);
+  font-size: 30pt;
+}
+
+
+p
+{
+  color: #0D4C52;
+}
 </TEXTAREA>
