--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<a href="chec_z13.html" target="strony"> zadanie 13</a><br>
 		<a href="chec_z14.html" target="strony"> zadanie 14</a><br>
 		<a href="chec_z15.html" target="strony"> zadanie 15</a><br>
+	        <a href="zadanie16_chec.html" target="strony"> zadanie 16</a><br>
       </td>
       <td align="center">
 	    <iframe width=100% height=650 name="strony" src="start.html" border="0">
