--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<a href="chec_z15.html" target="strony"> zadanie 15</a><br>
 	        <a href="zadanie16_chec.html" target="strony"> zadanie 16</a><br>
 	        <a href="zadanie17_p1_chec.html" target="strony"> zadanie 17</a><br>
-	      <a href="zadanie18_chec.html" target="strony"> zadanie 17</a><br>
+	      <a href="zadanie18_chec.html" target="strony"> zadanie 18</a><br>
       </td>
       <td align="center">
 	    <iframe width=100% height=650 name="strony" src="start.html" border="0">
@@ -43,7 +43,7 @@
 		<a href="chec_z13kod.html" target="strony">kod do 13</a><br>
 		<a href="chec_z15kod.html" target="strony">kod do 15</a><br>
 	        <a href="zadanie17_p1_kod.html" target="strony"> kod do 17</a><br>
-	        <a href="zadanie18_kod.html" target="strony"> zadanie 17</a><br>
+	        <a href="zadanie18_kod.html" target="strony"> kod 18</a><br>
 	  </td>
     </tr>
     </table>
