--- a/zadanie18_kod.html
+++ b/zadanie18_kod.html
@@ -12,14 +12,16 @@ Znacznik DIV (blok 1)-->Chechła
 </span>
 <br />
 <span style="font-size:1.3 cm;font-family: Times New Roman;">
-<b><u> Element blokowy (DIV)</u> </b> jest elementem blokowym może zawierać wewnątrz siebie zwykły tekst, jak również <br> 
+<b><u> Element blokowy (DIV)</u> </b> jest elementem blokowym może zawierać wewnątrz siebie zwykły tekst, jak 
+również <br> 
 inne elementy blokowe. Został on pomyślany do tworzenia obszerniejszych struktur.
 </span>
 <span style="font-family: Arial, Helvetica, sans-serif; font-size: 5mm;"> <br />
 Zastosowanie DIV
 <ul type="cirkle"style="color:#808080; font-size: 8mm">
 <li>
-Z div'a powinno się korzystać kiedy potrzebujemy wyodrębnić poszczególne bloki w układzie dokumentu, na przykład lewa <br> 
+Z div'a powinno się korzystać kiedy potrzebujemy wyodrębnić poszczególne bloki w układzie dokumentu, na przykład 
+lewa <br> 
 kolumna, menu nawigacyjne, stopka.
 </li>
 <li>Służy do utworzenia sekcji (bloku) w pliku HTML w celu ich sformatowania za pomocą arkusza stylów CSS.</li>
@@ -53,7 +55,8 @@ Różnica między zacznikami DIV i SPAN(blok 3)--> 1P
 <span style="font-family: Arial, Helvetica, sans-serif; font-size: 7mm;"> <br/>
 <ul type="square"style="color:#0000FF; font-size: 7mm">
 <li>
-<b><u> Span'em</u> </b>wyodrębniamy <b>elementy liniowe</b> (najczęściej fragmenty tekstu) a <b><u>divem</u> blokowe</b> <br> 
+<b><u> Span'em</u> </b>wyodrębniamy <b>elementy liniowe</b> (najczęściej fragmenty tekstu) a <b><u>divem</u> blokowe
+</b><br> 
 (blokowe elementy, większe fragmenty struktury składające się na układ strony).
 </li>
 <li>Dodatkowo DIV domyślnie jest wyświetlany w bloku. Natomiast SPAN w linii.</li>
