--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
 		<a href="chec_z5_2.css" target="strony">Z5_zewnêtrzny</a><br>
 		<a href="chec_z5_3.css" target="strony">Z5_wewnêtrzna</a><br>
 		<a href="chec_z5_4.css" target="strony">Z5_liniowy</a><br>
-		<a href="chec_z6kod.html" target="strony">kod do 6</a><br>
-		<a href="chec_z13kod.html" target="strony">kod do 13</a><br>
-		<a href="chec_z15kod.html" target="strony">kod do 15</a><br>
-	        <a href="zadanie17_p1_kod.html" target="strony"> kod do 17</a><br>
-	        <a href="zadanie18_kod.html" target="strony"> kod do 18</a><br>
-	        <a href="zadanie19_kod.html" target="strony"> kod do 19</a><br>
+		<a href="chec_z6kod.html" target="strony">kod do zadania 6</a><br>
+		<a href="chec_z13kod.html" target="strony">kod do zadania 13</a><br>
+		<a href="chec_z15kod.html" target="strony">kod do zadania 15</a><br>
+	        <a href="zadanie17_p1_kod.html" target="strony"> kod do zadania 17</a><br>
+	        <a href="zadanie18_kod.html" target="strony"> kod do zadania 18</a><br>
+	        <a href="zadanie19_kod.html" target="strony"> kod do zadania 19</a><br>
+	       <a href=" zadanie20kod_chec.html" target="strony"> kod do zadania 20</a><br>
+	     
 	  </td>
     </tr>
     </table>
