--- a/zadanie20kod_chec.html
+++ b/zadanie20kod_chec.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html cols="60" rows="80>
 <html lang="pl-PL">
   <head>
     <meta http-equiv="content-type" content="text/html" charset="UTF-8">
