--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                 <a href=" zadanie20_chec.html" target="strony"> zadanie 20</a><br>
 	        <a href=" zadanie21_chec.html" target="strony"> zadanie 21</a><br>
 	      <a href=" zadanie22_chec.html" target="strony"> zadanie 22</a><br>
+	      <a href="zadanie23_chec.html" target="strony"> zadanie 23</a><br>
+	      <a href="zadanie32_chec.html" target="strony"> zadanie 32</a><br>
 	 
 	    </td>
       <td align="center">
