--- a/zadanie32_chec.html
+++ b/zadanie32_chec.html
@@ -5,9 +5,9 @@
 
 </head>
 <body>
-<h1>1.Podaj definicję modelu pudełkowego</h1>
+<h2>1.Podaj definicję modelu pudełkowego</h2>
 Każdy element w dokumencie HTML, otacza się prostokątnym obszarem zwanym pudełkiem 
-<h1>2.Wykonaj oraz uzupełnij tabelę: </h1>
+<h2>2.Wykonaj oraz uzupełnij tabelę: </h2>
 <table>
 <table border="1">
    <tr>
@@ -20,7 +20,7 @@ Każdy element w dokumencie HTML, otacza się prostokątnym obszarem zwanym pude
    </tr>
    <tr>
       <td>padding</td> 
-	  <td>- otaczające marginesy wewnętrzne, odstęp między obramowaniem i <br>
+	  <td>otaczające marginesy wewnętrzne, odstęp między obramowaniem i <br>
 	   zawartością elementu</td> 
    </tr>
    <tr>
@@ -29,9 +29,25 @@ Każdy element w dokumencie HTML, otacza się prostokątnym obszarem zwanym pude
    </tr>
    <tr>
       <td>margin</td> 
-	  <td>– marginesy wokół ramki (margines zewnętrzny). Jest to pusty obszar wokół<br>
+	  <td>marginesy wokół ramki (margines zewnętrzny). Jest to pusty obszar wokół<br>
        ramki, który nie ma koloru tła i jest przeźroczysty.
 </td> 
    </tr>
   
 </table>
+<h2>3.Podaj dwie uwagi na temat modelu pudełkowego.</h2>
+<h3>Uwaga 1</h3>
+Padding, border i margin mogą mieć zerową wartość
+<h3>Uwaga 2</h3>
+Tło elementu jest określone dla wszystkich z podanych powyżej obszarów z wyjątkiem 
+marginesów zewnętrznych, które zawsze są przezroczyste (transparent)<BR>
+
+<h2> 4.Model pudełkowy </h2>
+<img src="model.pudełkowy.jpg" width="500" height="300" /><br>
+<h2> Różnica między paddingiem i marginesem</h2>
+Padding określa przestrzeń wokół danego elementu, np: "p" lub <br> "div", natomiast margines przestrzeń pomiędzy elementami.<br>
+<img src="pading.jpg" width="500" height="300" /><br>
+Jak widać na rysunku, padding oznaczony jest kolorem niebieskim. Określa on wielkość<br> przestrzeni wokół elementu "p". Element ten posiada również margines zaznaczony kolorem <br>
+pomarańczowym. Jest to odległość od brzegu elementu 'body'
+</body>
+</html>
