--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	      <a href=" zadanie22_chec.html" target="strony"> zadanie 22</a><br>
 	      <a href="zadanie23_chec.html" target="strony"> zadanie 23</a><br>
 	      <a href="zadanie32_chec.html" target="strony"> zadanie 32</a><br>
+	      <a href="zadanie33_chec.html" target="strony"> zadanie 32</a><br>
 	 
 	    </td>
       <td align="center">
@@ -52,7 +53,8 @@
 	        <a href="zadanie17_p1_kod.html" target="strony"> kod do zadania 17</a><br>
 	        <a href="zadanie18_kod.html" target="strony"> kod do zadania 18</a><br>
 	        <a href="zadanie19_kod.html" target="strony"> kod do zadania 19</a><br>
-	       <a href=" zadanie20kod_chec.html" target="strony"> kod do zadania 20</a><br>
+	        <a href=" zadanie20kod_chec.html" target="strony"> kod do zadania 20</a><br>
+	        <a href="zadanie33_kod.html" target="strony"> kod do zadania 33</a><br>
 	     
 	  </td>
     </tr>
