--- a/zadanie35_chec.html
+++ b/zadanie35_chec.html
@@ -23,6 +23,6 @@ h1 {
  </style>
  </head>
 <body>
-<div><h1>tutaj wpisz twoje nazwisko i klasę</h1></div>
+<div><h1>Wiktoria Chechła 1P</h1></div>
 </body>
 </html>
