--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 	      <a href="zadanie23_chec.html" target="strony"> zadanie 23</a><br>
 	      <a href="zadanie32_chec.html" target="strony"> zadanie 32</a><br>
 	      <a href="zadanie33_chec.html" target="strony"> zadanie 33</a><br>
+	      <a href="zadanie34_chec.html" target="strony"> zadanie 34</a><br>
 	      <a href="zadanie35_chec.html" target="strony"> zadanie 35</a><br>
+	      <a href="zadanie36_chec.html" target="strony"> zadanie 36</a><br>
 	 
 	    </td>
       <td align="center">
