--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 	        <a href="zadanie19_kod.html" target="strony"> kod do zadania 19</a><br>
 	        <a href=" zadanie20kod_chec.html" target="strony"> kod do zadania 20</a><br>
 	        <a href="zadanie33_kod.html" target="strony"> kod do zadania 33</a><br>
+	        <a href="zadanie34_kod.html" target="strony"> kod do zadania 34</a><br>
+	        <a href="zadanie36_kod.html" target="strony"> kod do zadania 36</a><br>
 	     
 	  </td>
     </tr>
