--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	      <a href="zadanie34_chec.html" target="strony"> zadanie 34</a><br>
 	      <a href="zadanie35_chec.html" target="strony"> zadanie 35</a><br>
 	      <a href="zadanie36_chec.html" target="strony"> zadanie 36</a><br>
-	      <a href="zadanie58_chechla.html" target="strony"> zadanie 58</a><br>
+	      <a href="zadanie58_chec.html" target="strony"> zadanie 58</a><br>
 	 
 	    </td>
       <td align="center">
