--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	      <a href="zadanie35_chec.html" target="strony"> zadanie 35</a><br>
 	      <a href="zadanie36_chec.html" target="strony"> zadanie 36</a><br>
 	      <a href="zadanie58_chec.html" target="strony"> zadanie 58</a><br>
+	       <a href="zadanie59_chec.html" target="strony"> zadanie 59</a><br>
 	 
 	    </td>
       <td align="center">
