--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
 	      <a href="zadanie36_chec.html" target="strony"> zadanie 36</a><br>
 	      <a href="zadanie58_chec.html" target="strony"> zadanie 58</a><br>
 	       <a href="zadanie59_chec.html" target="strony"> zadanie 59</a><br>
+	      <a href="zadanie60_chec.html" target="strony"> zadanie 60</a><br>
+	      <a href="zadanie61_chec.html" target="strony"> zadanie 61</a><br>
+	      <a href="zadanie62_chec.html" target="strony"> zadanie 62</a><br>
+	      <a href="zadanie63_chec.html" target="strony"> zadanie 63</a><br>
+	      <a href="zadanie64_chec.html" target="strony"> zadanie 64</a><br>
+	      <a href="zadanie65_chec.html" target="strony"> zadanie 65</a><br>
+	      <a href="zadanie66_chec.html" target="strony"> zadanie 66</a><br>
+	      <a href="zadanie67_chec.html" target="strony"> zadanie 67</a><br>
 	 
 	    </td>
       <td align="center">
