--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 	        <a href="zadanie33_kod.html" target="strony"> kod do zadania 33</a><br>
 	        <a href="zadanie34_kod.html" target="strony"> kod do zadania 34</a><br>
 	        <a href="zadanie36_kod.html" target="strony"> kod do zadania 36</a><br>
+	      <a href="zadanie59_kod.html" target="strony"> kod do zadania 59</a><br>
+	      <a href="zadanie60_kod.html" target="strony"> kod do zadania 60</a><br>
+	      <a href="zadanie61_kod.html" target="strony"> kod do zadania 61</a><br>
 	     
 	  </td>
     </tr>
