--- a/zadanie61_kod.html
+++ b/zadanie61_kod.html
@@ -5,7 +5,7 @@
  <head>
     <meta charset="utf-8">
     <title>zad61</title>
-    <link rel="stylesheet" href="zad61_redz.css">
+    <link rel="stylesheet" href="zad61_chec.css">
 	
  </head>
 <body>
