--- a/zadanie60_kod.html
+++ b/zadanie60_kod.html
@@ -4,7 +4,7 @@
  <head>
     <meta charset="utf-8">
     <title>zad60</title>
-    <link rel="stylesheet" href="zad60_redz.css">
+    <link rel="stylesheet" href="zad60_chec.css">
 	<style>
 	div{
 width:624px;
