--- a/zadanie59_kod.html
+++ b/zadanie59_kod.html
@@ -4,7 +4,7 @@
  <head>
     <meta charset="utf-8">
     <title>zad59</title>
-    <link rel="stylesheet" href="zad59_redz.css">
+    <link rel="stylesheet" href="zad59_chec.css">
 	
 <style>
 a
