--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
 	      <a href="zadanie59_kod.html" target="strony"> kod do zadania 59</a><br>
 	      <a href="zadanie60_kod.html" target="strony"> kod do zadania 60</a><br>
 	      <a href="zadanie61_kod.html" target="strony"> kod do zadania 61</a><br>
+	      <a href="zadanie62_kod.html" target="strony"> kod do zadania 62</a><br>
+	      <a href="zadanie63_kod.html" target="strony"> kod do zadania 63</a><br>
+	      <a href="zadanie66_kod.html" target="strony"> kod do zadania 66</a><br>
+	      <a href="zadanie67_kod.html" target="strony"> kod do zadania 67</a><br>
 	     
 	  </td>
     </tr>
