--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 	      <a href="zadanie61_kod.html" target="strony"> kod do zadania 61</a><br>
 	      <a href="zadanie62_kod.html" target="strony"> kod do zadania 62</a><br>
 	      <a href="zadanie63_kod.html" target="strony"> kod do zadania 63</a><br>
+	      <a href="zadanie65_kod.html" target="strony"> kod do zadania 65</a><br>
 	      <a href="zadanie66_kod.html" target="strony"> kod do zadania 66</a><br>
 	      <a href="zadanie67_kod.html" target="strony"> kod do zadania 67</a><br>
 	     
