--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 	      <a href="zadanie65_chec.html" target="strony"> zadanie 65</a><br>
 	      <a href="zadanie66_chec.html" target="strony"> zadanie 66</a><br>
 	      <a href="zadanie67_chec.html" target="strony"> zadanie 67</a><br>
+	       <a href="zadanie81_chec.html" target="strony"> zadanie 81</a><br>
+	       <a href="zadanie82_chec.html" target="strony"> zadanie 82</a><br>
 	 
 	    </td>
       <td align="center">
@@ -78,6 +80,8 @@
 	      <a href="zadanie65_kod.html" target="strony"> kod do zadania 65</a><br>
 	      <a href="zadanie66_kod.html" target="strony"> kod do zadania 66</a><br>
 	      <a href="zadanie67_kod.html" target="strony"> kod do zadania 67</a><br>
+	      <a href="zadanie81_kod.html" target="strony"> kod do zadania 81</a><br>
+	      <a href="zadanie82_kod.html" target="strony"> kod do zadania 82</a><br>
 	     
 	  </td>
     </tr>
