--- a/index.html
+++ b/index.html
@@ -48,8 +48,12 @@
 	      <a href="zadanie65_chec.html" target="strony"> zadanie 65</a><br>
 	      <a href="zadanie66_chec.html" target="strony"> zadanie 66</a><br>
 	      <a href="zadanie67_chec.html" target="strony"> zadanie 67</a><br>
+	        <a href="zadanie74_chec.html" target="strony"> zadanie 74</a><br>
+	        <a href="zadanie75_chec.html" target="strony"> zadanie 75</a><br>
+	        <a href="zadanie76_chec.html" target="strony"> zadanie 76</a><br>
 	       <a href="zadanie81_chec.html" target="strony"> zadanie 81</a><br>
 	       <a href="zadanie82_chec.html" target="strony"> zadanie 82</a><br>
+	        
 	 
 	    </td>
       <td align="center">
