--- a/zadanie75_chec.html
+++ b/zadanie75_chec.html
@@ -17,12 +17,12 @@ border: 5px red solid;
 
 <table>
    <tr>
-      <td style="background-color:Lime;">Wiktoria Chechła 1P</td>
-	  <td style="background-color:grey;">Wiktoria Chechła 1P</td>
+      <td>Wiktoria Chechła 1P</td>
+	  <td>Wiktoria Chechła 1P</td>
 	</tr>
 	<tr>
-      <td style="background-color:red;">Wiktoria Chechła 1P</td>
-	  <td style="background-color:purple;">Wiktoria Chechła 1P</td>
+      <td>Wiktoria Chechła 1P</td>
+	  <td>Wiktoria Chechła 1P</td>
 	</tr>
 </table>
 </body>
