--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	        <a href="zadanie74_chec.html" target="strony"> zadanie 74</a><br>
 	        <a href="zadanie75_chec.html" target="strony"> zadanie 75</a><br>
 	        <a href="zadanie76_chec.html" target="strony"> zadanie 76</a><br>
-	        <a href="zadanie77_chec.html" target="strony"> zadanie 77</a><br>
+	        <a href="zadanie77.chec.html" target="strony"> zadanie 77</a><br>
 	        <a href="zadanie78_chec.html" target="strony"> zadanie 78</a><br>
 	        <a href="zadanie81_chec.html" target="strony"> zadanie 81</a><br>
 	        <a href="zadanie82_chec.html" target="strony"> zadanie 82</a><br>
